# RiceGrainCounter

./: CMakeLists.txt  README.txt  main.cpp
